--- a/lib/Gamed/public/css/gamed.css
+++ b/lib/Gamed/public/css/gamed.css
@@ -1,4 +1,5 @@
-html, body { height: 100%; width: 100%; margin: 0; overflow: hidden; }
+html, body {
+  height: 100%; width: 100%; margin: 0; overflow: hidden; }
 #top { width: 100%; text-align: right; }
 #game { margin: 0; width: 100%; height: 80%; }
 #hud { width: 100%; height: 20%; }
@@ -8,4 +9,15 @@ html, body { height: 100%; width: 100%; margin: 0; overflow: hidden; }
 .avatar {
   height: 100px;
   width: 100px;
+  background-color: LightBlue;
+}
+
+.player {
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.player .player-name {
+  text-align: center;
 }
