Display player's name and avatar when joining

--- a/lib/Gamed/public/css/gamed.css
+++ b/lib/Gamed/public/css/gamed.css
@@ -10,6 +10,8 @@ html, body {
   height: 100px;
   width: 100px;
   background-color: LightBlue;
+  background-size: 100px;
+  background-repeat: no-repeat;
 }
 
 .player {
