Switch div when entering bidding state

--- a/lib/Gamed/public/css/Rook.css
+++ b/lib/Gamed/public/css/Rook.css
@@ -1,7 +1,10 @@
 #declaring-tab {
   display:none;
 }
-#bid-tab {
+#declaring-tab {
+  display:none;
+}
+#bidding-tab {
   display:none;
 }
 #table {
