--- a/lib/Gamed/public/g/Rook/style.css
+++ b/lib/Gamed/public/g/Rook/style.css
@@ -25,6 +25,7 @@
 .nest {
   float: left;
   padding: 20px;
+  height: 16em;
   border: 2px solid #333;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
